<resources>
    <string name="app_name">ParkingControl</string>
    <string name="bienvenido">Bienvenido a Parking Control</string>
    <string name="iniciaSesion">Inicia sesión para empezar</string>
    <string name="btn_text_login">INICIAR SESIÓN</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="text_error_username">El nombre de usuario es requerido</string>
    <string name="text_error_password">La contraseña no puede ser vacía</string>
    <string name="login_message">Has iniciado sesión perfectamente.</string>

    <string name="parqueos">Parqueos</string>
    <string name="cuenta">Mi cuenta</string>
    <string name="usuario">Usuario</string>
    <string name="correo">usuario@ejemplo.com</string>

    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="titulo">Parking Control</string>

    <string name="matricula">No. de Matricula</string>
    <string name="cliente">Id del cliente</string>

    <string name="cancelar">CANCELAR</string>
    <string name="registrar">REGISTRAR</string>
    <string name="registrar_parqueo">Registrar parqueo</string>

    <string name="summary_name">El nombre con que te identificaras dentro de la aplicación</string>

    <string name="summary_password">Clave que permite iniciar sesión en la aplicación</string>

    <string name="notificacion_email">Recibe notificaciones de la aplicación, noticias e información relevante en tu cuenta de correo</string>
    <string name="title_notificacion_email">Notificaciones por correo electrónico</string>
    <string name="exportar_registros">Exportar registros</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="op1_export">Sin conservar los registros localmente</string>
    <string name="op2_export">Conservando los registros localmente</string>
    <string name="error_interfaz">El contexto debe implementar la interfaz OnAgregarRegistroListener</string>
    <string name="llenar_campos">Por favor llenar todos los campos</string>
    <string name="error_archivo">Aun no hay archivo</string>
    <string name="error_lista">Error al cargar la lista</string>
    <string name="error_actualizar_archivo">Error al actualizar el archivo</string>
    <string name="error_guardar_nuevo_elemento">Error al guardar elemento en la lista</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="error_eliminar">Error al eliminar el elemento</string>
    <string name="ingresar_datos">Ingresa tus datos</string>

</resources>
